@@ -30,9 +30,9 @@ define('USERPANEL_SETUPMODE', 1);
 
 function module_get_template($tpl_name, &$tpl_source, $smarty_obj)
 {
-	global $LMS;
+	global $LMS, $module_dir;
 	$template = explode(':', $tpl_name);
-	$template_path = ConfigHelper::getConfig('directories.userpanel_dir').'/modules/'.$template[0].'/templates/'.$template[1];
+	$template_path = $module_dir . $template[0].'/templates/'.$template[1];
 	if (file_exists($template_path))
 	{
 		$tpl_source = file_get_contents($template_path);
@@ -43,9 +43,9 @@ function module_get_template($tpl_name, &$tpl_source, $smarty_obj)
 
 function module_get_timestamp($tpl_name, &$tpl_timestamp, $smarty_obj)
 {
-	global $LMS;
+	global $LMS, $module_dir;
 	$template = explode(':', $tpl_name);
-	$template_path = ConfigHelper::getConfig('directories.userpanel_dir').'/modules/'.$template[0].'/templates/'.$template[1];
+	$template_path = $module_dir . $template[0].'/templates/'.$template[1];
 	if (file_exists($template_path))
 	{
 		$tpl_timestamp = filectime($template_path);
@@ -79,15 +79,20 @@ require_once(USERPANEL_DIR.'/lib/Userpanel.class.php');
 $USERPANEL = new USERPANEL($DB, $SESSION);
 
 // Initialize modules
-$dh  = opendir(USERPANEL_MODULES_DIR);
-while (false !== ($filename = readdir($dh))) 
-{
-	if ((preg_match('/^[a-zA-Z0-9]/',$filename)) && (is_dir(USERPANEL_MODULES_DIR.$filename)) && file_exists(USERPANEL_MODULES_DIR.$filename.'/configuration.php'))
-	{
-		@include(USERPANEL_MODULES_DIR.$filename.'/locale/'.$_ui_language.'/strings.php');
-		include(USERPANEL_MODULES_DIR.$filename.'/configuration.php');
+
+$modules_dirs = array(USERPANEL_MODULES_DIR);
+$modules_dirs = $plugin_manager->executeHook('userpanel_modules_dir_initialized', $modules_dirs);
+
+foreach ($modules_dirs as $suspected_module_dir) {
+	$dh  = opendir($suspected_module_dir);
+	while (false !== ($filename = readdir($dh))) {
+		if ((preg_match('/^[a-zA-Z0-9]/',$filename)) && (is_dir($suspected_module_dir . $filename))
+			&& file_exists($suspected_module_dir . $filename.'/configuration.php')) {
+			@include($suspected_module_dir . $filename.'/locale/'.$_ui_language.'/strings.php');
+			include($suspected_module_dir . $filename.'/configuration.php');
+		}
 	}
-};
+}
 
 $SMARTY->assignByRef('menu', $USERPANEL->MODULES);
 
@@ -98,8 +103,16 @@ $layout['pagetitle'] = trans('Configure Module: $a',$module);
 
 if($module == 'userpanel')
 	$modulefile_include = USERPANEL_DIR.'/lib/setup_functions.php';
-else
-	$modulefile_include = file_exists(USERPANEL_MODULES_DIR.$module.'/functions.php') ? USERPANEL_MODULES_DIR.$module.'/functions.php' : NULL;
+else {
+	global $module_dir;
+	$module_dir = null;
+	foreach ($modules_dirs as $suspected_module_dir)
+		if (file_exists($suspected_module_dir . $module.'/functions.php')) {
+			$module_dir = $suspected_module_dir;
+			break;
+		}
+	$modulefile_include = ($module_dir !== null ? $module_dir . $module.'/functions.php' : NULL);
+}
 
 if (isset($modulefile_include))
 {
