@@ -4,6 +4,7 @@ version ?.??.?? (????-??-??):
 
   - added support of new style plugins in userpanel - hooks executed before
     module load have 'userpanel_*_on_load' name pattern [chilan]
+  - added support of new style plugins in userpanel module setup part [chilan]
 
 version 1.11.17 (2015-06-29):
 
